Clean code, tách một số bộ phận trong MainController thành file riêng.